package com.damon.shared.common;

import com.damon.shared.model.ValueObject;

/***
 * @author Damon S.
 */
public interface Specification<T extends Specification<T>> extends ValueObject<T> {

}
